= Domain Model Diagram
:plantuml:

[plantuml, domain-model, png]
----
@startuml

entity User {
  id : SERIAL
  username : VARCHAR
  email : VARCHAR
  password_hash : VARCHAR
  created_at : TIMESTAMP
}

entity Game {
  id : SERIAL
  title : VARCHAR
  description : TEXT
  price : DECIMAL
  release_date : DATE
  developer : VARCHAR
}

entity Review {
  id : SERIAL
  user_id : INT
  game_id : INT
  rating : INT
  comment : TEXT
  created_at : TIMESTAMP
}

entity Library {
  id : SERIAL
  user_id : INT
  game_id : INT
  rating : INT
  comment : TEXT
  created_at : TIMESTAMP
}

' Relationships with 1..* notation
User "1" -- "0..*" Review : writes
Game "1" -- "0..*" Review : has
Library "1" -- "0..*" Game : has
User "1" - "1" Library : owns
@enduml
----
